# philipshue

./: .gitignore  .travis.yml  Cargo.toml  LICENCE  README.md  appveyor.yml  build.rs
examples/: discover_bridge.rs  discover_bridge_upnp.rs  get_all_groups.rs  get_all_lights.rs  get_all_scenes.rs  recall_scene.rs  register_user.rs  set_group_state.rs  set_light_state.rs
examples/discover/: mod.rs
src/: bridge.rs  errors.rs  hue.in.rs  hue.rs  json.in.rs  json.rs  lib.rs  success.rs
