[package]
name = "philipshue"
version = "0.3.0"
authors = [
  "Mathieu Poumeyrol <kali@zoy.org>",
  "Bjarke Sørensen <bs@wasd.dk>",
  "Lucas Falch Sørensen <lucas@wasd.dk>"
]
description = "Rust library for Philips Hue lights"
documentation = "http://docs.rs/philipshue/"
homepage = "http://www.orangenose.com/products/philipshue/"
repository = "http://github.com/Orangenosecom/philipshue"
readme = "README.md"
license = "MIT"
keywords = [ "Philips", "hue", "light", "bulb" ]
exclude = [
    ".gitignore",
    ".travis.yml",
    "appveyor.yml"
]

[features]
default = ["nupnp"]
upnp = ["ssdp"]
nupnp = ["hyper/ssl"]
unstable = ["upnp"]

[dependencies]
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
ssdp = { version = "0.5", optional = true }
error-chain = "0.8"
# hyper = "0.10.4"
# hyper-openssl = { version = "0.2.2", optional = true }

# TODO Update hyper
[dependencies.hyper]
version = "0.9.11"
default-features = false
