[package]
name = "philipshue"
version = "0.3.2"
authors = [
  "Mathieu Poumeyrol <kali@zoy.org>",
  "Bjarke Sørensen <bs@wasd.dk>",
  "Lucas Falch Sørensen <lucas@wasd.dk>"
]
description = "Rust library for Philips Hue lights"
documentation = "http://docs.rs/philipshue/"
homepage = "http://www.orangenose.com/products/philipshue/"
repository = "http://github.com/Orangenosecom/philipshue"
readme = "README.md"
license = "MIT"
keywords = [ "Philips", "hue", "light", "bulb" ]
exclude = [
    ".gitignore",
    ".travis.yml",
    "appveyor.yml"
]

[features]
default = ["nupnp"]
upnp = ["ssdp"]
nupnp = ["hyper-openssl"]
unstable = ["upnp"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ssdp = { version = "0.6", optional = true }
error-chain = "0.10"
hyper = "0.10"
hyper-openssl = { version = "0.2", optional = true }
