[package]
name = "philipshue"
version = "0.3.2"
authors = ["this library will look nothing like the old"]
description = "Rust library for Philips Hue lights"
documentation = "http://docs.rs/philipshue/"
repository = "http://github.com/xentrick/philipshue"
readme = "README.md"
license = "MIT"
keywords = [ "Philips", "hue", "light", "bulb" ]
exclude = [
    ".gitignore",
    ".travis.yml",
    "appveyor.yml"
]
edition = "2018"

[features]
default = ["nupnp"]
upnp = ["ssdp"]
nupnp = ["hyper-tls"]
unstable = ["upnp"]

[dependencies]
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.40"
ssdp = { version = "0.6", optional = true }
error-chain = "0.11"
hyper = "0.12.35"
hyper-tls = { version = "0.3.2", optional = true }